test/expected/perr_unexpected_do.out
shit: 2:1: error: 'do' has no matching 'while', 'until', or 'for'.
     2 |  do
       |  ^~ here.
